--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+songbook-client (0.2-1) lucid; urgency=low
+
+  * Initial release
+
+ -- Romain Goffe <romain.goffe@gmail.com>  Tue, 25 May 2010 22:15:37 +0200
+
 songbook-client (0.1-1) lucid; urgency=low
 
   * Initial release
