--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+songbook-client (0.3-1) lucid; urgency=low
+
+  * Initial release
+
+ -- Romain Goffe <romain.goffe@gmail.com>  Mon, 26 Jul 2010 00:47:25 +0200
+
 songbook-client (0.2-1) lucid; urgency=low
 
   * Initial release
