--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,12 @@
 songbook-client (0.3-1) lucid; urgency=low
 
-  * Initial release
+  * New upstream version
 
  -- Romain Goffe <romain.goffe@gmail.com>  Mon, 26 Jul 2010 00:47:25 +0200
 
 songbook-client (0.2-1) lucid; urgency=low
 
-  * Initial release
+  * New upstream version
 
  -- Romain Goffe <romain.goffe@gmail.com>  Tue, 25 May 2010 22:15:37 +0200
 
