--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+songbook-client (0.3.1-1) maverick; urgency=low
+
+  * New upstream version
+
+ -- Romain Goffe <romain.goffe@gmail.com>  Sun, 24 Oct 2010 03:12:09 +0200
+
+songbook-client (0.3-2) lucid; urgency=low
+
+  * New upstream version
+
+ -- Romain Goffe <romain.goffe@gmail.com>  Mon, 16 Aug 2010 20:00:41 +0200
+
 songbook-client (0.3-1) lucid; urgency=low
 
   * New upstream version
