--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+songbook-client (0.4-1) maverick; urgency=low
+
+  * New upstream version
+
+ -- Romain Goffe <romain.goffe@gmail.com>  Sun, 02 Jan 2011 18:51:32 +0100
+
 songbook-client (0.3.2-1) maverick; urgency=low
 
   * New upstream version
