--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+songbook-client (0.4.1-1) maverick; urgency=low
+
+  * New upstream version
+
+ -- Romain Goffe <romain.goffe@gmail.com>  Wed, 02 Mar 2011 23:01:30 +0100
+
 songbook-client (0.4-1) maverick; urgency=low
 
   * New upstream version
