--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+songbook-client (0.5-1) natty; urgency=low
+
+  * New upstream version
+
+ -- Romain Goffe <romain.goffe@gmail.com>  Sat, 18 Jun 2011 20:49:20 +0200
+
 songbook-client (0.4.1-1) maverick; urgency=low
 
   * New upstream version
