--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-songbook-client (0.6) oneiric; urgency=low
+songbook-client (0.6) squeeze; urgency=low
 
   * New upstream version
 
- -- Romain Goffe <romain.goffe@gmail.com>  Wed, 12 Oct 2011 14:43:39 +0200
+ -- Alexandre Dupas <alexandre.dupas@gmail.com>  Mon, 31 Oct 2011 23:46:33 +0100
 
 songbook-client (0.5-1ubuntu2) maverick; urgency=low
 
