--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+songbook-client (0.7) squeeze; urgency=low
+
+  * New upstream version
+
+ -- Alexandre Dupas <alexandre.dupas@gmail.com>  Sun, 13 May 2012 20:24:06 +0200
+
 songbook-client (0.6) squeeze; urgency=low
 
   * New upstream version
