--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+songbook-client (0.7) precise; urgency=low
+
+  * New upstream version
+
+ -- Romain Goffe <romain.goffe@gmail.com> Mon, 14 May 2012 18:26:36 +0200
+
 songbook-client (0.7) squeeze; urgency=low
 
   * New upstream version
