Update changelog for version 0.7.3-2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+songbook-client (0.7.3-2) wheezy; urgency=low
+
+  * Add a debian/watch file as per package definition
+
+ -- Alexandre Dupas <alexandre.dupas@gmail.com>  Wed, 30 May 2012 02:06:18 +0200
+
 songbook-client (0.7.3-1) wheezy; urgency=low
 
   * Take ownership of the package and bump the standards-version
