--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+songbook-client (0.7.3-4) UNRELEASED; urgency=low
+
+  * Update build dependencies to add libhunspell-dev for spellchecking
+
+ -- Alexandre Dupas <alexandre.dupas@gmail.com>  Sat, 02 Jun 2012 02:21:22 +0200
+
 songbook-client (0.7.3-3) wheezy; urgency=low
 
   * Add Vcs-* fields
