--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-songbook-client (0.7.4-1) UNRELEASED; urgency=low
+songbook-client (0.7.8-1~1.gbpd87318) UNRELEASED; urgency=low
+
+  ** SNAPSHOT build @d873183d837e38a58ec50a32d92c885f1133965b **
 
   * New upstream version
 
- -- Alexandre Dupas <alexandre.dupas@gmail.com>  Sun, 03 Jun 2012 16:58:25 +0200
+ -- Alexandre Dupas <alexandre.dupas@gmail.com>  Sat, 29 Sep 2012 23:53:52 +0200
 
 songbook-client (0.7.3-4) wheezy; urgency=low
 
