--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,8 @@
-songbook-client (0.7.8-1~1.gbpd87318) UNRELEASED; urgency=low
-
-  ** SNAPSHOT build @d873183d837e38a58ec50a32d92c885f1133965b **
+songbook-client (0.7.8-1) wheezy; urgency=low
 
   * New upstream version
 
- -- Alexandre Dupas <alexandre.dupas@gmail.com>  Sat, 29 Sep 2012 23:53:52 +0200
+ -- Alexandre Dupas <alexandre@mazrok.lohrun.net>  Sun, 30 Sep 2012 00:24:34 +0200
 
 songbook-client (0.7.3-4) wheezy; urgency=low
 
