--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ songbook-client (0.7.8-1) wheezy; urgency=low
 
   * New upstream version
 
- -- Alexandre Dupas <alexandre@mazrok.lohrun.net>  Sun, 30 Sep 2012 00:24:34 +0200
+ -- Alexandre Dupas <alexandre.dupas@gmail.com>  Sun, 30 Sep 2012 00:24:34 +0200
 
 songbook-client (0.7.3-4) wheezy; urgency=low
 
