Final Songbook-Client -> Patagui switch
Apart from a couple of details and a strange windows icon bug, the
thing works.

--- a/macos_specific/sparkle/appcast/README
+++ b/macos_specific/sparkle/appcast/README
@@ -1,3 +1,3 @@
-Ceci est le dossier d'appcast pour le songbook client
+Ceci est le dossier d'appcast pour patagui
 ci ceci est bien fait, il suffit de le rendre accessible à un url donnée pour pouvoir faire les mises à jour.
 
